# utwt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: dump_utmp.rs
src/: entry.rs  lib.rs  parse.rs
tests/: basic.rs
